ajout de la suppression d'un compte

--- a/db/db_data.properties
+++ b/db/db_data.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Tue May 16 16:16:47 CEST 2017
+#Wed May 17 13:47:25 CEST 2017
 version=2.3.4
-modified=no
+modified=yes
 tx_timestamp=0
