--- a/db/db_data.properties
+++ b/db/db_data.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Wed May 17 13:47:25 CEST 2017
+#Wed May 17 14:25:26 CEST 2017
 version=2.3.4
-modified=yes
+modified=no
 tx_timestamp=0
