--- a/db/db_data.properties
+++ b/db/db_data.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Fri May 19 14:29:27 CEST 2017
+#Fri May 19 15:30:23 CEST 2017
 version=2.3.4
-modified=no
+modified=yes
 tx_timestamp=0
