--- a/db/db_data.properties
+++ b/db/db_data.properties
@@ -1,9 +1,5 @@
 #HSQL Database Engine 2.3.4
-<<<<<<< HEAD
-#Wed May 17 19:08:32 CEST 2017
-=======
-#Fri May 19 15:30:23 CEST 2017
->>>>>>> branch 'master' of https://github.com/arzman/ComptaLapin.git
+#Sat May 20 22:15:55 CEST 2017
 version=2.3.4
-modified=yes
+modified=no
 tx_timestamp=0
