--- a/db/db_data.properties
+++ b/db/db_data.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Sat May 20 22:15:55 CEST 2017
+#Mon May 22 10:34:53 CEST 2017
 version=2.3.4
-modified=no
+modified=yes
 tx_timestamp=0
