--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,3 +1,4 @@
 #Toto
-#Mon May 22 16:03:45 CEST 2017
-mainscene.splitgaucheDroite.position=0.6151439299123905
+#Mon May 22 16:49:07 CEST 2017
+mainscene.splitgaucheDroite.position=0.5913642052565707
+mainscene.splitHautBas.position=0.594327990135635
