MeP des templates de trimestre ( ihm de saisie du template) mais pas dese lement.MeP de la sauvegarde des état de l'IHM

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,4 +1,16 @@
 #Toto
-#Mon May 22 22:11:17 CEST 2017
-mainscene.splitgaucheDroite.position=0.6418636995827538
-mainscene.splitHautBas.position=0.671604938271605
+#Tue May 23 15:22:32 CEST 2017
+ComptePane.table.col.montant=129.0
+ComptePane.table.col.nom=199.0
+ComptePane.table.col.prev1=129.0
+ComptePane.table.col.prev2=129.0
+ComptePane.table.col.prev3=128.0
+ConfigureTemplateDialog.dialog.height=503.0
+ConfigureTemplateDialog.dialog.width=688.0
+ExerciceMensuelPane.deux.resPane.exp=false
+ExerciceMensuelPane.trois.depPane.exp=false
+ExerciceMensuelPane.trois.resPane.exp=false
+ExerciceMensuelPane.trois.transPane.exp=false
+ExerciceMensuelPane.un.depPane.exp=false
+MainScene.splitHautBas.pos=0.9482120838471023
+MainScene.splitgaucheDroite.pos=0.7240300375469336
