--- a/context/db/db_data.properties
+++ b/context/db/db_data.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Mon May 22 22:10:23 CEST 2017
+#Tue May 23 13:54:32 CEST 2017
 version=2.3.4
-modified=yes
+modified=no
 tx_timestamp=0
