Edition d'un element de template

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,16 +1,23 @@
 #Toto
-#Tue May 23 15:22:32 CEST 2017
-ComptePane.table.col.montant=129.0
+#Tue May 23 17:22:59 CEST 2017
+ComptePane.table.col.montant=83.0
 ComptePane.table.col.nom=199.0
-ComptePane.table.col.prev1=129.0
-ComptePane.table.col.prev2=129.0
-ComptePane.table.col.prev3=128.0
+ComptePane.table.col.prev1=65.0
+ComptePane.table.col.prev2=77.0
+ComptePane.table.col.prev3=78.447265625
+ConfigureTemplateDialog.col.cible=146.0
+ConfigureTemplateDialog.col.freq=71.0
+ConfigureTemplateDialog.col.montant=72.0
+ConfigureTemplateDialog.col.nom=50.0
+ConfigureTemplateDialog.col.occ=79.0
+ConfigureTemplateDialog.col.source=161.0
+ConfigureTemplateDialog.col.type=81.0
 ConfigureTemplateDialog.dialog.height=503.0
-ConfigureTemplateDialog.dialog.width=688.0
+ConfigureTemplateDialog.dialog.width=698.0
 ExerciceMensuelPane.deux.resPane.exp=false
 ExerciceMensuelPane.trois.depPane.exp=false
 ExerciceMensuelPane.trois.resPane.exp=false
 ExerciceMensuelPane.trois.transPane.exp=false
 ExerciceMensuelPane.un.depPane.exp=false
-MainScene.splitHautBas.pos=0.9482120838471023
-MainScene.splitgaucheDroite.pos=0.7240300375469336
+MainScene.splitHautBas.pos=600
+MainScene.splitgaucheDroite.pos=750
