--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Fri Jun 02 11:43:34 CEST 2017
+#Fri Jun 02 16:10:13 CEST 2017
 ComptePane.table.col.montant=83.0
 ComptePane.table.col.nom=199.0
 ComptePane.table.col.prev1=65.0
@@ -14,10 +14,10 @@ ConfigureTemplateDialog.col.source=161.0
 ConfigureTemplateDialog.col.type=81.0
 ConfigureTemplateDialog.dialog.height=503.0
 ConfigureTemplateDialog.dialog.width=789.0
-ExerciceMensuelPane.deux.resPane.exp=false
-ExerciceMensuelPane.trois.depPane.exp=false
-ExerciceMensuelPane.trois.resPane.exp=false
+ExerciceMensuelPane.deux.resPane.exp=true
+ExerciceMensuelPane.trois.depPane.exp=true
+ExerciceMensuelPane.trois.resPane.exp=true
 ExerciceMensuelPane.trois.transPane.exp=false
-ExerciceMensuelPane.un.depPane.exp=false
+ExerciceMensuelPane.un.depPane.exp=true
 MainScene.splitHautBas.pos=600
-MainScene.splitgaucheDroite.pos=750
+MainScene.splitgaucheDroite.pos=680
