--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Fri Jun 02 17:24:31 CEST 2017
+#Fri Jun 02 22:43:15 CEST 2017
 ComptePane.table.col.montant=83.0
 ComptePane.table.col.nom=199.0
 ComptePane.table.col.prev1=97.0
@@ -17,7 +17,7 @@ ConfigureTemplateDialog.dialog.width=789.0
 ExerciceMensuelPane.deux.resPane.exp=true
 ExerciceMensuelPane.trois.depPane.exp=true
 ExerciceMensuelPane.trois.resPane.exp=true
-ExerciceMensuelPane.trois.transPane.exp=false
+ExerciceMensuelPane.trois.transPane.exp=true
 ExerciceMensuelPane.un.depPane.exp=true
 MainScene.splitHautBas.pos=600
 MainScene.splitgaucheDroite.pos=680
