MeP de la prise en compte des opérations

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Fri Jun 02 22:43:15 CEST 2017
+#Tue Jun 06 16:53:35 CEST 2017
 ComptePane.table.col.montant=83.0
 ComptePane.table.col.nom=199.0
 ComptePane.table.col.prev1=97.0
@@ -19,5 +19,6 @@ ExerciceMensuelPane.trois.depPane.exp=true
 ExerciceMensuelPane.trois.resPane.exp=true
 ExerciceMensuelPane.trois.transPane.exp=true
 ExerciceMensuelPane.un.depPane.exp=true
+ExerciceMensuelPane.un.transPane.exp=true
 MainScene.splitHautBas.pos=600
 MainScene.splitgaucheDroite.pos=680
