Correction suppression trimestre : suppression de op

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,7 +1,7 @@
 #Toto
-#Wed Jun 07 17:24:21 CEST 2017
+#Wed Jun 07 20:54:00 CEST 2017
 ComptePane.table.col.montant=83.0
-ComptePane.table.col.nom=199.0
+ComptePane.table.col.nom=88.0
 ComptePane.table.col.prev1=97.0
 ComptePane.table.col.prev2=77.0
 ComptePane.table.col.prev3=78.447265625
@@ -20,5 +20,5 @@ ExerciceMensuelPane.trois.resPane.exp=true
 ExerciceMensuelPane.trois.transPane.exp=true
 ExerciceMensuelPane.un.depPane.exp=true
 ExerciceMensuelPane.un.transPane.exp=true
-MainScene.splitHautBas.pos=600
-MainScene.splitgaucheDroite.pos=680
+MainScene.splitHautBas.pos=0.674074074074074
+MainScene.splitgaucheDroite.pos=0.6606397774687065
