--- a/context/db/db_data.properties
+++ b/context/db/db_data.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.4
-#Thu Jun 08 12:52:52 CEST 2017
+#Thu Jun 08 12:59:03 CEST 2017
 version=2.3.4
-modified=yes
+modified=no
 tx_timestamp=0
