--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Fri Jun 09 15:39:40 CEST 2017
+#Fri Jun 09 15:56:35 CEST 2017
 ComptePane.table.col.montant=90.0
 ComptePane.table.col.nom=155.0
 ComptePane.table.col.prev1=85.0
@@ -49,3 +49,5 @@ ExerciceMensuelun.tabletrans.col.montant=77.0
 ExerciceMensuelun.tabletrans.col.nom=62.0
 MainScene.splitHautBas.pos=0.6535141800246609
 MainScene.splitgaucheDroite.pos=0.6583229036295369
+SearchOperationDialog.size.heigth=557.0
+SearchOperationDialog.size.width=666.0
