--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Fri Jun 09 16:04:23 CEST 2017
+#Fri Jun 09 16:07:58 CEST 2017
 ComptePane.table.col.montant=90.0
 ComptePane.table.col.nom=155.0
 ComptePane.table.col.prev1=85.0
@@ -7,13 +7,21 @@ ComptePane.table.col.prev2=95.0
 ComptePane.table.col.prev3=78.447265625
 ConfigureTemplateDialog.col.cible=78.0
 ConfigureTemplateDialog.col.freq=75.0
-ConfigureTemplateDialog.col.montant=97.0
+ConfigureTemplateDialog.col.montant=151.0
 ConfigureTemplateDialog.col.nom=50.0
 ConfigureTemplateDialog.col.occ=88.0
 ConfigureTemplateDialog.col.source=82.0
 ConfigureTemplateDialog.col.type=74.0
-ConfigureTemplateDialog.dialog.height=528.0
-ConfigureTemplateDialog.dialog.width=582.0
+ConfigureTemplateDialog.dialog.height=456.0
+ConfigureTemplateDialog.dialog.width=653.0
+ConfigureTemplateDialog.size.heigth=456.0
+ConfigureTemplateDialog.size.width=653.0
+CreateTrimestreDialog.size.heigth=276.0
+CreateTrimestreDialog.size.width=317.0
+DateDialog.size.heigth=238.0
+DateDialog.size.width=216.0
+EditCompteDialog.size.heigth=438.0
+EditCompteDialog.size.width=551.0
 ExerciceMensueldeux.tabledep.col.etat=50.0
 ExerciceMensueldeux.tabledep.col.montant=137.0
 ExerciceMensueldeux.tabledep.col.nom=104.0
@@ -49,5 +57,7 @@ ExerciceMensuelun.tabletrans.col.montant=77.0
 ExerciceMensuelun.tabletrans.col.nom=62.0
 MainScene.splitHautBas.pos=0.6535141800246609
 MainScene.splitgaucheDroite.pos=0.6583229036295369
-SearchOperationDialog.size.heigth=557.0
-SearchOperationDialog.size.width=666.0
+ManageTrimestreCourantDialog.size.heigth=276.0
+ManageTrimestreCourantDialog.size.width=232.0
+SearchOperationDialog.size.heigth=595.0
+SearchOperationDialog.size.width=682.0
