--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Fri Jun 09 16:07:58 CEST 2017
+#Fri Jun 09 17:31:02 CEST 2017
 ComptePane.table.col.montant=90.0
 ComptePane.table.col.nom=155.0
 ComptePane.table.col.prev1=85.0
@@ -12,16 +12,18 @@ ConfigureTemplateDialog.col.nom=50.0
 ConfigureTemplateDialog.col.occ=88.0
 ConfigureTemplateDialog.col.source=82.0
 ConfigureTemplateDialog.col.type=74.0
-ConfigureTemplateDialog.dialog.height=456.0
-ConfigureTemplateDialog.dialog.width=653.0
-ConfigureTemplateDialog.size.heigth=456.0
-ConfigureTemplateDialog.size.width=653.0
-CreateTrimestreDialog.size.heigth=276.0
-CreateTrimestreDialog.size.width=317.0
+ConfigureTemplateDialog.dialog.height=470.0
+ConfigureTemplateDialog.dialog.width=709.0
+ConfigureTemplateDialog.size.heigth=470.0
+ConfigureTemplateDialog.size.width=709.0
+CreateTrimestreDialog.size.heigth=390.0
+CreateTrimestreDialog.size.width=365.0
 DateDialog.size.heigth=238.0
 DateDialog.size.width=216.0
-EditCompteDialog.size.heigth=438.0
-EditCompteDialog.size.width=551.0
+EditCompteDialog.size.heigth=552.0
+EditCompteDialog.size.width=599.0
+EditTemplateEltDialog.size.heigth=584.0
+EditTemplateEltDialog.size.width=344.0
 ExerciceMensueldeux.tabledep.col.etat=50.0
 ExerciceMensueldeux.tabledep.col.montant=137.0
 ExerciceMensueldeux.tabledep.col.nom=104.0
@@ -57,7 +59,7 @@ ExerciceMensuelun.tabletrans.col.montant=77.0
 ExerciceMensuelun.tabletrans.col.nom=62.0
 MainScene.splitHautBas.pos=0.6535141800246609
 MainScene.splitgaucheDroite.pos=0.6583229036295369
-ManageTrimestreCourantDialog.size.heigth=276.0
-ManageTrimestreCourantDialog.size.width=232.0
-SearchOperationDialog.size.heigth=595.0
-SearchOperationDialog.size.width=682.0
+ManageTrimestreCourantDialog.size.heigth=428.0
+ManageTrimestreCourantDialog.size.width=296.0
+SearchOperationDialog.size.heigth=633.0
+SearchOperationDialog.size.width=698.0
