MeP tableau des budgets

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,10 @@
 #Toto
-#Fri Jun 09 18:56:02 CEST 2017
+#Tue Jun 13 14:52:51 CEST 2017
+BudgetPane.table.col.avance=106.0
+BudgetPane.table.col.nom=93.0
+BudgetPane.table.col.obj=100.0
+BudgetPane.table.col.prev2=104.0
+BudgetPane.table.col.prev3=97.0
 ComptePane.table.col.montant=97.0
 ComptePane.table.col.nom=116.0
 ComptePane.table.col.prev1=82.0
@@ -18,8 +23,8 @@ ConfigureTemplateDialog.size.heigth=371.0
 ConfigureTemplateDialog.size.width=398.0
 CreateTrimestreDialog.size.heigth=239.0
 CreateTrimestreDialog.size.width=301.0
-EditCompteDialog.size.heigth=239.0
-EditCompteDialog.size.width=316.0
+EditCompteDialog.size.heigth=315.0
+EditCompteDialog.size.width=348.0
 EditTemplateEltDialog.size.heigth=320.0
 EditTemplateEltDialog.size.width=232.0
 ExerciceMensueldeux.tabledep.col.etat=50.0
@@ -55,3 +60,5 @@ ExerciceMensuelun.tabletrans.col.cptsource=50.0
 ExerciceMensuelun.tabletrans.col.etat=50.0
 ExerciceMensuelun.tabletrans.col.montant=50.0
 ExerciceMensuelun.tabletrans.col.nom=50.0
+MainScene.splitHautBas.pos=0.5819975339087546
+MainScene.splitgaucheDroite.pos=0.6695869837296621
