--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Tue Jun 13 14:52:51 CEST 2017
+#Tue Jun 13 17:52:01 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -10,23 +10,25 @@ ComptePane.table.col.nom=116.0
 ComptePane.table.col.prev1=82.0
 ComptePane.table.col.prev2=73.0
 ComptePane.table.col.prev3=108.0
-ConfigureTemplateDialog.col.cible=50.0
-ConfigureTemplateDialog.col.freq=50.0
-ConfigureTemplateDialog.col.montant=50.0
+ConfigureTemplateDialog.col.cible=96.0
+ConfigureTemplateDialog.col.freq=76.0
+ConfigureTemplateDialog.col.montant=81.0
 ConfigureTemplateDialog.col.nom=50.0
-ConfigureTemplateDialog.col.occ=50.0
-ConfigureTemplateDialog.col.source=50.0
-ConfigureTemplateDialog.col.type=50.0
-ConfigureTemplateDialog.dialog.height=371.0
-ConfigureTemplateDialog.dialog.width=398.0
-ConfigureTemplateDialog.size.heigth=371.0
-ConfigureTemplateDialog.size.width=398.0
-CreateTrimestreDialog.size.heigth=239.0
-CreateTrimestreDialog.size.width=301.0
-EditCompteDialog.size.heigth=315.0
-EditCompteDialog.size.width=348.0
-EditTemplateEltDialog.size.heigth=320.0
-EditTemplateEltDialog.size.width=232.0
+ConfigureTemplateDialog.col.occ=92.0
+ConfigureTemplateDialog.col.source=80.0
+ConfigureTemplateDialog.col.type=75.0
+ConfigureTemplateDialog.dialog.height=439.0
+ConfigureTemplateDialog.dialog.width=617.0
+ConfigureTemplateDialog.size.heigth=439.0
+ConfigureTemplateDialog.size.width=617.0
+CreateOperationDialog.size.heigth=238.0
+CreateOperationDialog.size.width=216.0
+CreateTrimestreDialog.size.heigth=277.0
+CreateTrimestreDialog.size.width=317.0
+EditCompteDialog.size.heigth=505.0
+EditCompteDialog.size.width=428.0
+EditTemplateEltDialog.size.heigth=472.0
+EditTemplateEltDialog.size.width=296.0
 ExerciceMensueldeux.tabledep.col.etat=50.0
 ExerciceMensueldeux.tabledep.col.montant=50.0
 ExerciceMensueldeux.tabledep.col.nom=50.0
@@ -50,8 +52,8 @@ ExerciceMensueltrois.tabletrans.col.etat=50.0
 ExerciceMensueltrois.tabletrans.col.montant=50.0
 ExerciceMensueltrois.tabletrans.col.nom=50.0
 ExerciceMensuelun.tabledep.col.etat=50.0
-ExerciceMensuelun.tabledep.col.montant=50.0
-ExerciceMensuelun.tabledep.col.nom=50.0
+ExerciceMensuelun.tabledep.col.montant=99.0
+ExerciceMensuelun.tabledep.col.nom=84.0
 ExerciceMensuelun.tableres.col.etat=50.0
 ExerciceMensuelun.tableres.col.montant=50.0
 ExerciceMensuelun.tableres.col.nom=50.0
