--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Tue Jun 13 22:41:29 CEST 2017
+#Wed Jun 14 12:17:43 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -25,8 +25,10 @@ CreateOperationDialog.size.heigth=277.0
 CreateOperationDialog.size.width=232.0
 CreateTrimestreDialog.size.heigth=277.0
 CreateTrimestreDialog.size.width=317.0
-EditCompteDialog.size.heigth=622.0
-EditCompteDialog.size.width=476.0
+EditBudgetDialog.size.heigth=542.0
+EditBudgetDialog.size.width=344.0
+EditCompteDialog.size.heigth=660.0
+EditCompteDialog.size.width=492.0
 EditTemplateEltDialog.size.heigth=472.0
 EditTemplateEltDialog.size.width=296.0
 ExerciceMensueldeux.tabledep.col.etat=50.0
