Ajout d'icone + ré-organisation des budgets

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Wed Jun 14 12:17:43 CEST 2017
+#Wed Jun 14 17:20:13 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -10,6 +10,8 @@ ComptePane.table.col.nom=116.0
 ComptePane.table.col.prev1=82.0
 ComptePane.table.col.prev2=73.0
 ComptePane.table.col.prev3=108.0
+ConfigBudgetDialog.size.heigth=695.0
+ConfigBudgetDialog.size.width=679.0
 ConfigureTemplateDialog.col.cible=96.0
 ConfigureTemplateDialog.col.freq=76.0
 ConfigureTemplateDialog.col.montant=81.0
@@ -23,12 +25,14 @@ ConfigureTemplateDialog.size.heigth=439.0
 ConfigureTemplateDialog.size.width=617.0
 CreateOperationDialog.size.heigth=277.0
 CreateOperationDialog.size.width=232.0
-CreateTrimestreDialog.size.heigth=277.0
-CreateTrimestreDialog.size.width=317.0
-EditBudgetDialog.size.heigth=542.0
-EditBudgetDialog.size.width=344.0
-EditCompteDialog.size.heigth=660.0
-EditCompteDialog.size.width=492.0
+CreateTrimestreDialog.size.heigth=315.0
+CreateTrimestreDialog.size.width=333.0
+DateDialog.size.heigth=146.0
+DateDialog.size.width=314.0
+EditBudgetDialog.size.heigth=268.0
+EditBudgetDialog.size.width=488.0
+EditCompteDialog.size.heigth=301.0
+EditCompteDialog.size.width=540.0
 EditTemplateEltDialog.size.heigth=472.0
 EditTemplateEltDialog.size.width=296.0
 ExerciceMensueldeux.tabledep.col.etat=50.0
