MeP de l'utilisation d'un budget

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Wed Jun 14 22:52:12 CEST 2017
+#Thu Jun 15 12:50:04 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -70,3 +70,5 @@ ExerciceMensuelun.tabletrans.col.montant=65.0
 ExerciceMensuelun.tabletrans.col.nom=50.0
 MainScene.splitHautBas.pos=0.6654088050314465
 MainScene.splitgaucheDroite.pos=0.6196105702364395
+UseBudgetDialog.size.heigth=256.0
+UseBudgetDialog.size.width=297.0
