Mep consultation de l'historique d'utilisation d'un budget

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Thu Jun 15 12:50:04 CEST 2017
+#Sun Jun 18 17:32:11 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -29,8 +29,8 @@ CreateTrimestreDialog.size.heigth=354.0
 CreateTrimestreDialog.size.width=349.0
 DateDialog.size.heigth=146.0
 DateDialog.size.width=314.0
-EditBudgetDialog.size.heigth=307.0
-EditBudgetDialog.size.width=504.0
+EditBudgetDialog.size.heigth=345.0
+EditBudgetDialog.size.width=520.0
 EditCompteDialog.size.heigth=301.0
 EditCompteDialog.size.width=540.0
 EditTemplateEltDialog.size.heigth=472.0
@@ -68,7 +68,9 @@ ExerciceMensuelun.tabletrans.col.cptsource=69.0
 ExerciceMensuelun.tabletrans.col.etat=21.0
 ExerciceMensuelun.tabletrans.col.montant=65.0
 ExerciceMensuelun.tabletrans.col.nom=50.0
+HistoryBudgetDialog.size.heigth=392.0
+HistoryBudgetDialog.size.width=286.0
 MainScene.splitHautBas.pos=0.6654088050314465
 MainScene.splitgaucheDroite.pos=0.6196105702364395
-UseBudgetDialog.size.heigth=256.0
-UseBudgetDialog.size.width=297.0
+UseBudgetDialog.size.heigth=217.0
+UseBudgetDialog.size.width=361.0
