--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Sun Jun 18 18:06:12 CEST 2017
+#Mon Jun 19 11:59:34 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -29,12 +29,14 @@ CreateTrimestreDialog.size.heigth=354.0
 CreateTrimestreDialog.size.width=349.0
 DateDialog.size.heigth=146.0
 DateDialog.size.width=314.0
-EditBudgetDialog.size.heigth=203.0
-EditBudgetDialog.size.width=280.0
+EditBudgetDialog.size.heigth=241.0
+EditBudgetDialog.size.width=296.0
 EditCompteDialog.size.heigth=301.0
 EditCompteDialog.size.width=540.0
 EditTemplateEltDialog.size.heigth=472.0
 EditTemplateEltDialog.size.width=296.0
+EditUtilisationDialog.size.heigth=360.0
+EditUtilisationDialog.size.width=310.0
 ExerciceMensueldeux.tabledep.col.etat=24.0
 ExerciceMensueldeux.tabledep.col.montant=68.0
 ExerciceMensueldeux.tabledep.col.nom=144.0
@@ -68,8 +70,8 @@ ExerciceMensuelun.tabletrans.col.cptsource=69.0
 ExerciceMensuelun.tabletrans.col.etat=21.0
 ExerciceMensuelun.tabletrans.col.montant=65.0
 ExerciceMensuelun.tabletrans.col.nom=50.0
-HistoryBudgetDialog.size.heigth=414.0
-HistoryBudgetDialog.size.width=398.0
+HistoryBudgetDialog.size.heigth=566.0
+HistoryBudgetDialog.size.width=462.0
 MainScene.splitHautBas.pos=0.6654088050314465
 MainScene.splitgaucheDroite.pos=0.6196105702364395
 UseBudgetDialog.size.heigth=255.0
