Edition d'elt de modele + Vgrow du tableau d'élément de modèle

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Mon Jun 19 14:30:20 CEST 2017
+#Tue Jun 20 10:58:13 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -15,28 +15,34 @@ ConfigBudgetDialog.size.width=734.0
 ConfigureTemplateDialog.col.cible=96.0
 ConfigureTemplateDialog.col.freq=76.0
 ConfigureTemplateDialog.col.montant=81.0
-ConfigureTemplateDialog.col.nom=50.0
+ConfigureTemplateDialog.col.nom=122.0
 ConfigureTemplateDialog.col.occ=92.0
-ConfigureTemplateDialog.col.source=80.0
+ConfigureTemplateDialog.col.source=86.55859375
 ConfigureTemplateDialog.col.type=75.0
-ConfigureTemplateDialog.dialog.height=439.0
-ConfigureTemplateDialog.dialog.width=617.0
-ConfigureTemplateDialog.size.heigth=439.0
-ConfigureTemplateDialog.size.width=617.0
-CreateOperationDialog.size.heigth=277.0
-CreateOperationDialog.size.width=232.0
-CreateTrimestreDialog.size.heigth=354.0
-CreateTrimestreDialog.size.width=349.0
+ConfigureTemplateDialog.dialog.height=693.0
+ConfigureTemplateDialog.dialog.width=847.0
+ConfigureTemplateDialog.size.heigth=693.0
+ConfigureTemplateDialog.size.width=847.0
+CreateOperationDialog.size.heigth=701.0
+CreateOperationDialog.size.width=794.0
+CreateTrimestreDialog.size.heigth=392.0
+CreateTrimestreDialog.size.width=365.0
 DateDialog.size.heigth=146.0
 DateDialog.size.width=314.0
 EditBudgetDialog.size.heigth=265.0
 EditBudgetDialog.size.width=354.0
-EditCompteDialog.size.heigth=301.0
-EditCompteDialog.size.width=540.0
-EditTemplateEltDialog.size.heigth=472.0
-EditTemplateEltDialog.size.width=296.0
+EditCompteDialog.size.heigth=643.0
+EditCompteDialog.size.width=684.0
+EditTemplateEltDialog.size.heigth=865.0
+EditTemplateEltDialog.size.width=702.0
 EditUtilisationDialog.size.heigth=360.0
 EditUtilisationDialog.size.width=310.0
+ExerciceMensuelPane.deux.resPane.exp=true
+ExerciceMensuelPane.deux.transPane.exp=false
+ExerciceMensuelPane.trois.resPane.exp=true
+ExerciceMensuelPane.trois.transPane.exp=false
+ExerciceMensuelPane.un.resPane.exp=true
+ExerciceMensuelPane.un.transPane.exp=true
 ExerciceMensueldeux.tabledep.col.etat=24.0
 ExerciceMensueldeux.tabledep.col.montant=68.0
 ExerciceMensueldeux.tabledep.col.nom=144.0
@@ -72,7 +78,9 @@ ExerciceMensuelun.tabletrans.col.montant=65.0
 ExerciceMensuelun.tabletrans.col.nom=50.0
 HistoryBudgetDialog.size.heigth=642.0
 HistoryBudgetDialog.size.width=406.0
-MainScene.splitHautBas.pos=0.6654088050314465
-MainScene.splitgaucheDroite.pos=0.6196105702364395
+MainScene.splitHautBas.pos=0.6331658291457286
+MainScene.splitgaucheDroite.pos=0.6408010012515645
+ManageTrimestreCourantDialog.size.heigth=238.0
+ManageTrimestreCourantDialog.size.width=216.0
 UseBudgetDialog.size.heigth=255.0
 UseBudgetDialog.size.width=377.0
