Fix de la sauvegarde de la taille des fenetres

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Tue Jun 20 10:58:13 CEST 2017
+#Tue Jun 20 13:47:52 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -10,8 +10,8 @@ ComptePane.table.col.nom=116.0
 ComptePane.table.col.prev1=82.0
 ComptePane.table.col.prev2=73.0
 ComptePane.table.col.prev3=108.0
-ConfigBudgetDialog.size.heigth=582.0
-ConfigBudgetDialog.size.width=734.0
+ConfigBudgetDialog.size.heigth=500.0
+ConfigBudgetDialog.size.width=700.0
 ConfigureTemplateDialog.col.cible=96.0
 ConfigureTemplateDialog.col.freq=76.0
 ConfigureTemplateDialog.col.montant=81.0
@@ -19,10 +19,10 @@ ConfigureTemplateDialog.col.nom=122.0
 ConfigureTemplateDialog.col.occ=92.0
 ConfigureTemplateDialog.col.source=86.55859375
 ConfigureTemplateDialog.col.type=75.0
-ConfigureTemplateDialog.dialog.height=693.0
-ConfigureTemplateDialog.dialog.width=847.0
-ConfigureTemplateDialog.size.heigth=693.0
-ConfigureTemplateDialog.size.width=847.0
+ConfigureTemplateDialog.dialog.height=736.0
+ConfigureTemplateDialog.dialog.width=881.0
+ConfigureTemplateDialog.size.heigth=736.0
+ConfigureTemplateDialog.size.width=881.0
 CreateOperationDialog.size.heigth=701.0
 CreateOperationDialog.size.width=794.0
 CreateTrimestreDialog.size.heigth=392.0
@@ -37,12 +37,15 @@ EditTemplateEltDialog.size.heigth=865.0
 EditTemplateEltDialog.size.width=702.0
 EditUtilisationDialog.size.heigth=360.0
 EditUtilisationDialog.size.width=310.0
-ExerciceMensuelPane.deux.resPane.exp=true
+ExerciceMensuelPane.deux.depPane.exp=false
+ExerciceMensuelPane.deux.resPane.exp=false
 ExerciceMensuelPane.deux.transPane.exp=false
-ExerciceMensuelPane.trois.resPane.exp=true
+ExerciceMensuelPane.trois.depPane.exp=false
+ExerciceMensuelPane.trois.resPane.exp=false
 ExerciceMensuelPane.trois.transPane.exp=false
-ExerciceMensuelPane.un.resPane.exp=true
-ExerciceMensuelPane.un.transPane.exp=true
+ExerciceMensuelPane.un.depPane.exp=true
+ExerciceMensuelPane.un.resPane.exp=false
+ExerciceMensuelPane.un.transPane.exp=false
 ExerciceMensueldeux.tabledep.col.etat=24.0
 ExerciceMensueldeux.tabledep.col.montant=68.0
 ExerciceMensueldeux.tabledep.col.nom=144.0
