enregistrement de l'etat de l'accordeon

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Tue Jun 20 13:47:52 CEST 2017
+#Thu Jun 22 14:17:43 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -37,10 +37,12 @@ EditTemplateEltDialog.size.heigth=865.0
 EditTemplateEltDialog.size.width=702.0
 EditUtilisationDialog.size.heigth=360.0
 EditUtilisationDialog.size.width=310.0
-ExerciceMensuelPane.deux.depPane.exp=false
+ExerciceMensuelPane.deux.depPane.exp=true
+ExerciceMensuelPane.deux.exp=1
 ExerciceMensuelPane.deux.resPane.exp=false
 ExerciceMensuelPane.deux.transPane.exp=false
-ExerciceMensuelPane.trois.depPane.exp=false
+ExerciceMensuelPane.trois.depPane.exp=true
+ExerciceMensuelPane.trois.exp=2
 ExerciceMensuelPane.trois.resPane.exp=false
 ExerciceMensuelPane.trois.transPane.exp=false
 ExerciceMensuelPane.un.depPane.exp=true
