--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Tue Jun 20 13:47:52 CEST 2017
+#Sat Jul 08 15:41:34 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -10,8 +10,8 @@ ComptePane.table.col.nom=116.0
 ComptePane.table.col.prev1=82.0
 ComptePane.table.col.prev2=73.0
 ComptePane.table.col.prev3=108.0
-ConfigBudgetDialog.size.heigth=500.0
-ConfigBudgetDialog.size.width=700.0
+ConfigBudgetDialog.size.heigth=503.0
+ConfigBudgetDialog.size.width=566.0
 ConfigureTemplateDialog.col.cible=96.0
 ConfigureTemplateDialog.col.freq=76.0
 ConfigureTemplateDialog.col.montant=81.0
@@ -20,8 +20,8 @@ ConfigureTemplateDialog.col.occ=92.0
 ConfigureTemplateDialog.col.source=86.55859375
 ConfigureTemplateDialog.col.type=75.0
 ConfigureTemplateDialog.dialog.height=736.0
-ConfigureTemplateDialog.dialog.width=881.0
-ConfigureTemplateDialog.size.heigth=736.0
+ConfigureTemplateDialog.dialog.width=897.0
+ConfigureTemplateDialog.size.heigth=0.0
 ConfigureTemplateDialog.size.width=881.0
 CreateOperationDialog.size.heigth=701.0
 CreateOperationDialog.size.width=794.0
@@ -43,7 +43,7 @@ ExerciceMensuelPane.deux.transPane.exp=false
 ExerciceMensuelPane.trois.depPane.exp=false
 ExerciceMensuelPane.trois.resPane.exp=false
 ExerciceMensuelPane.trois.transPane.exp=false
-ExerciceMensuelPane.un.depPane.exp=true
+ExerciceMensuelPane.un.depPane.exp=false
 ExerciceMensuelPane.un.resPane.exp=false
 ExerciceMensuelPane.un.transPane.exp=false
 ExerciceMensueldeux.tabledep.col.etat=24.0
@@ -79,8 +79,8 @@ ExerciceMensuelun.tabletrans.col.cptsource=69.0
 ExerciceMensuelun.tabletrans.col.etat=21.0
 ExerciceMensuelun.tabletrans.col.montant=65.0
 ExerciceMensuelun.tabletrans.col.nom=50.0
-HistoryBudgetDialog.size.heigth=642.0
-HistoryBudgetDialog.size.width=406.0
+HistoryBudgetDialog.size.heigth=536.0
+HistoryBudgetDialog.size.width=359.0
 MainScene.splitHautBas.pos=0.6331658291457286
 MainScene.splitgaucheDroite.pos=0.6408010012515645
 ManageTrimestreCourantDialog.size.heigth=238.0
