--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Sat Jul 08 15:41:34 CEST 2017
+#Sat Jul 08 16:16:51 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -31,19 +31,19 @@ DateDialog.size.heigth=146.0
 DateDialog.size.width=314.0
 EditBudgetDialog.size.heigth=265.0
 EditBudgetDialog.size.width=354.0
-EditCompteDialog.size.heigth=643.0
-EditCompteDialog.size.width=684.0
+EditCompteDialog.size.heigth=262.0
+EditCompteDialog.size.width=291.0
 EditTemplateEltDialog.size.heigth=865.0
 EditTemplateEltDialog.size.width=702.0
 EditUtilisationDialog.size.heigth=360.0
 EditUtilisationDialog.size.width=310.0
-ExerciceMensuelPane.deux.depPane.exp=false
+ExerciceMensuelPane.deux.depPane.exp=true
 ExerciceMensuelPane.deux.resPane.exp=false
 ExerciceMensuelPane.deux.transPane.exp=false
-ExerciceMensuelPane.trois.depPane.exp=false
+ExerciceMensuelPane.trois.depPane.exp=true
 ExerciceMensuelPane.trois.resPane.exp=false
 ExerciceMensuelPane.trois.transPane.exp=false
-ExerciceMensuelPane.un.depPane.exp=false
+ExerciceMensuelPane.un.depPane.exp=true
 ExerciceMensuelPane.un.resPane.exp=false
 ExerciceMensuelPane.un.transPane.exp=false
 ExerciceMensueldeux.tabledep.col.etat=24.0
