--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Mon Jul 24 10:20:38 CEST 2017
+#Mon Jul 24 10:58:26 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -23,8 +23,8 @@ ConfigureTemplateDialog.dialog.height=736.0
 ConfigureTemplateDialog.dialog.width=897.0
 ConfigureTemplateDialog.size.heigth=0.0
 ConfigureTemplateDialog.size.width=881.0
-CreateOperationDialog.size.heigth=701.0
-CreateOperationDialog.size.width=794.0
+CreateOperationDialog.size.heigth=210.0
+CreateOperationDialog.size.width=320.0
 CreateTrimestreDialog.size.heigth=392.0
 CreateTrimestreDialog.size.width=365.0
 DateDialog.size.heigth=146.0
@@ -39,6 +39,7 @@ EditUtilisationDialog.size.heigth=360.0
 EditUtilisationDialog.size.width=310.0
 ExerciceMensuelPane.deux.exp=1
 ExerciceMensuelPane.trois.exp=0
+ExerciceMensuelPane.un.exp=0
 ExerciceMensueldeux.tabledep.col.etat=24.0
 ExerciceMensueldeux.tabledep.col.montant=68.0
 ExerciceMensueldeux.tabledep.col.nom=144.0
