Ajout d'un graphique de synthèse des dépenses / ressources sur l'année

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Mon Jul 24 10:58:26 CEST 2017
+#Mon Jul 24 15:48:04 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -37,7 +37,7 @@ EditTemplateEltDialog.size.heigth=865.0
 EditTemplateEltDialog.size.width=702.0
 EditUtilisationDialog.size.heigth=360.0
 EditUtilisationDialog.size.width=310.0
-ExerciceMensuelPane.deux.exp=1
+ExerciceMensuelPane.deux.exp=0
 ExerciceMensuelPane.trois.exp=0
 ExerciceMensuelPane.un.exp=0
 ExerciceMensueldeux.tabledep.col.etat=24.0
@@ -79,5 +79,7 @@ MainScene.splitHautBas.pos=0.6331658291457286
 MainScene.splitgaucheDroite.pos=0.6408010012515645
 ManageTrimestreCourantDialog.size.heigth=238.0
 ManageTrimestreCourantDialog.size.width=216.0
+SynthAnnuelleDialog.size.heigth=603.0
+SynthAnnuelleDialog.size.width=1218.0
 UseBudgetDialog.size.heigth=255.0
 UseBudgetDialog.size.width=377.0
