MeP de l'export PDF

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Mon Jul 24 15:48:04 CEST 2017
+#Mon Jul 24 16:52:09 CEST 2017
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -79,6 +79,8 @@ MainScene.splitHautBas.pos=0.6331658291457286
 MainScene.splitgaucheDroite.pos=0.6408010012515645
 ManageTrimestreCourantDialog.size.heigth=238.0
 ManageTrimestreCourantDialog.size.width=216.0
+RapportTrimDialog.size.heigth=200.0
+RapportTrimDialog.size.width=200.0
 SynthAnnuelleDialog.size.heigth=603.0
 SynthAnnuelleDialog.size.width=1218.0
 UseBudgetDialog.size.heigth=255.0
