--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
     	<artifactId>hsqldb</artifactId>
     	<version>2.3.4</version>
     </dependency>
+    <dependency>
+    	<groupId>com.github.librepdf</groupId>
+    	<artifactId>openpdf</artifactId>
+    	<version>1.0.2</version>
+    </dependency>
   </dependencies>
 </project>
