ajout du transfert

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Tue Jul 25 20:50:50 CEST 2017
+#Tue Feb 26 12:39:42 CET 2019
 BudgetPane.table.col.avance=106.0
 BudgetPane.table.col.nom=93.0
 BudgetPane.table.col.obj=100.0
@@ -81,6 +81,8 @@ ManageTrimestreCourantDialog.size.heigth=238.0
 ManageTrimestreCourantDialog.size.width=216.0
 RapportTrimDialog.size.heigth=190.0
 RapportTrimDialog.size.width=288.0
+SelectExerciceMensuelDialog.size.heigth=247.0
+SelectExerciceMensuelDialog.size.width=320.0
 SynthAnnuelleDialog.size.heigth=523.0
 SynthAnnuelleDialog.size.width=1188.0
 UseBudgetDialog.size.heigth=255.0
