ajout de la visib budget

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,89 +1,81 @@
 #Toto
-#Thu Feb 28 10:04:52 CET 2019
-BudgetPane.table.col.avance=106.0
-BudgetPane.table.col.nom=221.0
-BudgetPane.table.col.obj=100.0
-BudgetPane.table.col.prev2=104.0
-BudgetPane.table.col.prev3=97.0
-ComptePane.table.col.montant=97.0
-ComptePane.table.col.nom=116.0
-ComptePane.table.col.prev1=82.0
-ComptePane.table.col.prev2=73.0
-ComptePane.table.col.prev3=108.0
-ConfigBudgetDialog.size.heigth=503.0
-ConfigBudgetDialog.size.width=566.0
-ConfigureTemplateDialog.col.cible=96.0
-ConfigureTemplateDialog.col.freq=76.0
-ConfigureTemplateDialog.col.montant=81.0
-ConfigureTemplateDialog.col.nom=122.0
-ConfigureTemplateDialog.col.occ=92.0
-ConfigureTemplateDialog.col.source=86.55859375
-ConfigureTemplateDialog.col.type=75.0
-ConfigureTemplateDialog.dialog.height=435.0
-ConfigureTemplateDialog.dialog.width=746.0
-ConfigureTemplateDialog.size.heigth=389.0
-ConfigureTemplateDialog.size.width=725.0
-CreateOperationDialog.size.heigth=210.0
-CreateOperationDialog.size.width=320.0
-CreateTrimestreDialog.size.heigth=159.0
-CreateTrimestreDialog.size.width=352.0
-DateDialog.size.heigth=146.0
-DateDialog.size.width=314.0
-EditBudgetDialog.size.heigth=265.0
-EditBudgetDialog.size.width=354.0
-EditCompteDialog.size.heigth=178.0
-EditCompteDialog.size.width=291.0
-EditTemplateEltDialog.size.heigth=281.0
-EditTemplateEltDialog.size.width=289.0
-EditUtilisationDialog.size.heigth=360.0
-EditUtilisationDialog.size.width=310.0
+#Wed Mar 06 14:45:43 CET 2019
+BudgetPane.table.col.avance=82.0
+BudgetPane.table.col.nom=92.0
+BudgetPane.table.col.obj=114.0
+BudgetPane.table.col.prev2=77.0
+BudgetPane.table.col.prev3=89.0
+ComptePane.table.col.montant=65.0
+ComptePane.table.col.nom=110.0
+ComptePane.table.col.prev1=107.0
+ComptePane.table.col.prev2=98.0
+ComptePane.table.col.prev3=136.0
+ConfigBudgetDialog.size.heigth=507.0
+ConfigBudgetDialog.size.width=567.0
+ConfigureTemplateDialog.col.cible=50.0
+ConfigureTemplateDialog.col.freq=50.0
+ConfigureTemplateDialog.col.montant=50.0
+ConfigureTemplateDialog.col.nom=50.0
+ConfigureTemplateDialog.col.occ=50.0
+ConfigureTemplateDialog.col.source=50.0
+ConfigureTemplateDialog.col.type=120.0
+ConfigureTemplateDialog.size.heigth=537.0
+ConfigureTemplateDialog.size.width=711.0
+CreateLabelRecurrentDialog.size.heigth=292.0
+CreateLabelRecurrentDialog.size.width=376.0
+CreateTrimestreDialog.size.heigth=200.0
+CreateTrimestreDialog.size.width=338.0
+EditBudgetDialog.size.heigth=214.0
+EditBudgetDialog.size.width=385.0
+EditTemplateEltDialog.size.heigth=292.0
+EditTemplateEltDialog.size.width=390.0
 ExerciceMensuelPane.deux.exp=0
-ExerciceMensuelPane.trois.exp=1
-ExerciceMensuelPane.un.exp=0
-ExerciceMensueldeux.tabledep.col.etat=24.0
-ExerciceMensueldeux.tabledep.col.montant=68.0
-ExerciceMensueldeux.tabledep.col.nom=98.0
-ExerciceMensueldeux.tableres.col.etat=21.0
-ExerciceMensueldeux.tableres.col.montant=71.0
-ExerciceMensueldeux.tableres.col.nom=143.0
-ExerciceMensueldeux.tabletrans.col.cptcible=66.0
-ExerciceMensueldeux.tabletrans.col.cptsource=76.0
-ExerciceMensueldeux.tabletrans.col.etat=23.0
-ExerciceMensueldeux.tabletrans.col.montant=63.0
+ExerciceMensueldeux.tabledep.col.etat=50.0
+ExerciceMensueldeux.tabledep.col.montant=121.0
+ExerciceMensueldeux.tabledep.col.nom=97.0
+ExerciceMensueldeux.tableres.col..etat=50.0
+ExerciceMensueldeux.tableres.col..montant=50.0
+ExerciceMensueldeux.tableres.col..nom=50.0
+ExerciceMensueldeux.tableres.col.etat=50.0
+ExerciceMensueldeux.tableres.col.montant=50.0
+ExerciceMensueldeux.tableres.col.nom=50.0
+ExerciceMensueldeux.tabletrans.col.cptcible=50.0
+ExerciceMensueldeux.tabletrans.col.cptsource=50.0
+ExerciceMensueldeux.tabletrans.col.etat=50.0
+ExerciceMensueldeux.tabletrans.col.montant=50.0
 ExerciceMensueldeux.tabletrans.col.nom=50.0
-ExerciceMensueltrois.tabledep.col.etat=28.0
-ExerciceMensueltrois.tabledep.col.montant=67.0
-ExerciceMensueltrois.tabledep.col.nom=88.0
-ExerciceMensueltrois.tableres.col.etat=29.0
-ExerciceMensueltrois.tableres.col.montant=129.0
-ExerciceMensueltrois.tableres.col.nom=103.0
-ExerciceMensueltrois.tabletrans.col.cptcible=70.0
-ExerciceMensueltrois.tabletrans.col.cptsource=75.0
-ExerciceMensueltrois.tabletrans.col.etat=21.0
-ExerciceMensueltrois.tabletrans.col.montant=76.0
+ExerciceMensueltrois.tabledep.col.etat=50.0
+ExerciceMensueltrois.tabledep.col.montant=90.0
+ExerciceMensueltrois.tabledep.col.nom=73.0
+ExerciceMensueltrois.tableres.col..etat=50.0
+ExerciceMensueltrois.tableres.col..montant=50.0
+ExerciceMensueltrois.tableres.col..nom=50.0
+ExerciceMensueltrois.tableres.col.etat=50.0
+ExerciceMensueltrois.tableres.col.montant=50.0
+ExerciceMensueltrois.tableres.col.nom=50.0
+ExerciceMensueltrois.tabletrans.col.cptcible=50.0
+ExerciceMensueltrois.tabletrans.col.cptsource=50.0
+ExerciceMensueltrois.tabletrans.col.etat=50.0
+ExerciceMensueltrois.tabletrans.col.montant=50.0
 ExerciceMensueltrois.tabletrans.col.nom=50.0
-ExerciceMensuelun.tabledep.col.etat=29.0
-ExerciceMensuelun.tabledep.col.montant=99.0
-ExerciceMensuelun.tabledep.col.nom=142.0
-ExerciceMensuelun.tableres.col.etat=28.0
-ExerciceMensuelun.tableres.col.montant=78.0
-ExerciceMensuelun.tableres.col.nom=132.0
-ExerciceMensuelun.tabletrans.col.cptcible=74.0
-ExerciceMensuelun.tabletrans.col.cptsource=69.0
-ExerciceMensuelun.tabletrans.col.etat=21.0
-ExerciceMensuelun.tabletrans.col.montant=65.0
+ExerciceMensuelun.tabledep.col.etat=50.0
+ExerciceMensuelun.tabledep.col.montant=50.0
+ExerciceMensuelun.tabledep.col.nom=50.0
+ExerciceMensuelun.tableres.col..etat=50.0
+ExerciceMensuelun.tableres.col..montant=50.0
+ExerciceMensuelun.tableres.col..nom=50.0
+ExerciceMensuelun.tableres.col.etat=50.0
+ExerciceMensuelun.tableres.col.montant=50.0
+ExerciceMensuelun.tableres.col.nom=50.0
+ExerciceMensuelun.tabletrans.col.cptcible=50.0
+ExerciceMensuelun.tabletrans.col.cptsource=50.0
+ExerciceMensuelun.tabletrans.col.etat=50.0
+ExerciceMensuelun.tabletrans.col.montant=50.0
 ExerciceMensuelun.tabletrans.col.nom=50.0
-HistoryBudgetDialog.size.heigth=414.0
-HistoryBudgetDialog.size.width=620.0
-MainScene.splitHautBas.pos=0.6331658291457286
-MainScene.splitgaucheDroite.pos=0.6408010012515645
-ManageTrimestreCourantDialog.size.heigth=238.0
-ManageTrimestreCourantDialog.size.width=216.0
-RapportTrimDialog.size.heigth=190.0
-RapportTrimDialog.size.width=288.0
-SelectExerciceMensuelDialog.size.heigth=247.0
-SelectExerciceMensuelDialog.size.width=320.0
-SynthAnnuelleDialog.size.heigth=683.0
-SynthAnnuelleDialog.size.width=1564.0
-UseBudgetDialog.size.heigth=255.0
-UseBudgetDialog.size.width=377.0
+ManageTrimestreCourantDialog.size.heigth=200.0
+ManageTrimestreCourantDialog.size.width=200.0
+VisiBudgetDialog.size.heigth=555.0
+VisiBudgetDialog.size.width=720.0
+VisiBudgetDialog.tableNoRecuBud.nom=82.0
+VisiBudgetDialog.tableNoRecuBud.obj=50.0
+VisiBudgetDialog.treeRecBudnom=132.0
