ajout de visibudget

--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Wed Mar 06 14:45:43 CET 2019
+#Tue Mar 12 13:24:05 CET 2019
 BudgetPane.table.col.avance=82.0
 BudgetPane.table.col.nom=92.0
 BudgetPane.table.col.obj=114.0
@@ -74,8 +74,16 @@ ExerciceMensuelun.tabletrans.col.montant=50.0
 ExerciceMensuelun.tabletrans.col.nom=50.0
 ManageTrimestreCourantDialog.size.heigth=200.0
 ManageTrimestreCourantDialog.size.width=200.0
+RapportTrimDialog.size.heigth=200.0
+RapportTrimDialog.size.width=285.0
+SynthAnnuelleDialog.size.heigth=515.0
+SynthAnnuelleDialog.size.width=1357.0
 VisiBudgetDialog.size.heigth=555.0
 VisiBudgetDialog.size.width=720.0
 VisiBudgetDialog.tableNoRecuBud.nom=82.0
-VisiBudgetDialog.tableNoRecuBud.obj=50.0
+VisiBudgetDialog.tableNoRecuBud.obj=78.0
+VisiBudgetDialog.treeRecBuddate=104.0
+VisiBudgetDialog.treeRecBudmontant=94.0
 VisiBudgetDialog.treeRecBudnom=132.0
+VisuBudgetDialog.size.heigth=751.0
+VisuBudgetDialog.size.width=909.0
