--- a/context/config/configuration.properties
+++ b/context/config/configuration.properties
@@ -1,5 +1,5 @@
 #Toto
-#Tue Mar 12 15:00:15 CET 2019
+#Tue Mar 19 20:42:28 CET 2019
 BudgetPane.table.col.avance=82.0
 BudgetPane.table.col.nom=92.0
 BudgetPane.table.col.obj=114.0
@@ -13,9 +13,9 @@ ComptePane.table.col.prev3=136.0
 ConfigBudgetDialog.size.heigth=507.0
 ConfigBudgetDialog.size.width=567.0
 ConfigureTemplateDialog.col.cible=50.0
-ConfigureTemplateDialog.col.freq=50.0
-ConfigureTemplateDialog.col.montant=50.0
-ConfigureTemplateDialog.col.nom=50.0
+ConfigureTemplateDialog.col.freq=129.0
+ConfigureTemplateDialog.col.montant=91.0
+ConfigureTemplateDialog.col.nom=70.0
 ConfigureTemplateDialog.col.occ=50.0
 ConfigureTemplateDialog.col.source=50.0
 ConfigureTemplateDialog.col.type=120.0
@@ -23,13 +23,21 @@ ConfigureTemplateDialog.size.heigth=537.0
 ConfigureTemplateDialog.size.width=711.0
 CreateLabelRecurrentDialog.size.heigth=292.0
 CreateLabelRecurrentDialog.size.width=376.0
-CreateTrimestreDialog.size.heigth=200.0
-CreateTrimestreDialog.size.width=338.0
+CreateOperationDialog.size.heigth=197.0
+CreateOperationDialog.size.width=368.0
+CreateTrimestreDialog.size.heigth=104.0
+CreateTrimestreDialog.size.width=403.0
+DateDialog.size.heigth=200.0
+DateDialog.size.width=285.0
 EditBudgetDialog.size.heigth=214.0
 EditBudgetDialog.size.width=385.0
+EditCompteDialog.size.heigth=200.0
+EditCompteDialog.size.width=285.0
 EditTemplateEltDialog.size.heigth=292.0
 EditTemplateEltDialog.size.width=390.0
-ExerciceMensuelPane.deux.exp=0
+ExerciceMensuelPane.deux.exp=2
+ExerciceMensuelPane.trois.exp=0
+ExerciceMensuelPane.un.exp=0
 ExerciceMensueldeux.tabledep.col.etat=50.0
 ExerciceMensueldeux.tabledep.col.montant=121.0
 ExerciceMensueldeux.tabledep.col.nom=97.0
@@ -46,7 +54,7 @@ ExerciceMensueldeux.tabletrans.col.montant=50.0
 ExerciceMensueldeux.tabletrans.col.nom=50.0
 ExerciceMensueltrois.tabledep.col.etat=50.0
 ExerciceMensueltrois.tabledep.col.montant=90.0
-ExerciceMensueltrois.tabledep.col.nom=73.0
+ExerciceMensueltrois.tabledep.col.nom=114.0
 ExerciceMensueltrois.tableres.col..etat=50.0
 ExerciceMensueltrois.tableres.col..montant=50.0
 ExerciceMensueltrois.tableres.col..nom=50.0
@@ -59,8 +67,8 @@ ExerciceMensueltrois.tabletrans.col.etat=50.0
 ExerciceMensueltrois.tabletrans.col.montant=50.0
 ExerciceMensueltrois.tabletrans.col.nom=50.0
 ExerciceMensuelun.tabledep.col.etat=50.0
-ExerciceMensuelun.tabledep.col.montant=50.0
-ExerciceMensuelun.tabledep.col.nom=50.0
+ExerciceMensuelun.tabledep.col.montant=100.0
+ExerciceMensuelun.tabledep.col.nom=99.0
 ExerciceMensuelun.tableres.col..etat=50.0
 ExerciceMensuelun.tableres.col..montant=50.0
 ExerciceMensuelun.tableres.col..nom=50.0
@@ -72,16 +80,26 @@ ExerciceMensuelun.tabletrans.col.cptsource=50.0
 ExerciceMensuelun.tabletrans.col.etat=50.0
 ExerciceMensuelun.tabletrans.col.montant=50.0
 ExerciceMensuelun.tabletrans.col.nom=50.0
+HistoryBudgetDialog.size.heigth=252.0
+HistoryBudgetDialog.size.width=308.0
+MainScene.splitHautBas.pos=0.49948717948717947
+MainScene.splitgaucheDroite.pos=0.5
 ManageTrimestreCourantDialog.size.heigth=200.0
-ManageTrimestreCourantDialog.size.width=200.0
+ManageTrimestreCourantDialog.size.width=285.0
 RapportTrimDialog.size.heigth=200.0
 RapportTrimDialog.size.width=285.0
+SearchOperationDialog.size.heigth=600.0
+SearchOperationDialog.size.width=826.0
+SelectExerciceMensuelDialog.size.heigth=200.0
+SelectExerciceMensuelDialog.size.width=285.0
 SynthAnnuelleDialog.size.heigth=515.0
 SynthAnnuelleDialog.size.width=1357.0
+UseBudgetDialog.size.heigth=193.0
+UseBudgetDialog.size.width=387.0
 VisiBudgetDialog.size.heigth=555.0
 VisiBudgetDialog.size.width=720.0
 VisiBudgetDialog.tableNoRecuBud.nom=82.0
-VisiBudgetDialog.tableNoRecuBud.obj=78.0
+VisiBudgetDialog.tableNoRecuBud.obj=103.0
 VisiBudgetDialog.treeRecBuddate=104.0
 VisiBudgetDialog.treeRecBudmontant=94.0
 VisiBudgetDialog.treeRecBudnom=132.0
